@@ -1,5 +1,10 @@
 2004-01-17  Michael Chastain  <mec.gnu@mindspring.com>
 
+	* gdb.cp/templates.exp: Accept more spaces with "<foo, ?bar>"
+	type patterns.
+
+2004-01-17  Michael Chastain  <mec.gnu@mindspring.com>
+
 	* gdb.cp/templates.exp: Fix typo in test name of
 	"print Foo<volatile char*>::foo".
 
